Add table header in js file

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -30,16 +30,14 @@
     <div class="panel panel-default" id="subs">
         <div class="panel-heading">Subscriber</div>
         <table class="table" id="substable">
-            <thead>
-            <tr>
-                <th>Id</th>
-                <th>IMSI</th>
-                <th>Extension</th>
-            </tr>
-            </thead>
-
+{#            <thead>#}
+{#            <tr>#}
+{#                <th>Id</th>#}
+{#                <th>IMSI</th>#}
+{#                <th>Extension</th>#}
+{#            </tr>#}
+{#            </thead>#}
         </table>
-
     </div>
 
 
