--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,3 +1,39 @@
+body {
+    /*font-size: 100%;*/
+    font-family: "Open Sans";
+
+}
+
+main {
+    width: 100vw;
+    height: 100vh;
+}
+
+ul {
+    list-style: none;
+}
+ul li {
+    padding-bottom: 2rem;
+}
+
+/*#smslistheader {*/
+    /*font-weight: bold;*/
+    /*font-size: large;*/
+/*}*/
+
+.listheader {
+    font-weight: bold;
+    font-size: large;
+}
+
+.content {
+    margin-top: 10vh;
+}
+
 h1 {
     color: dodgerblue;
+    text-align: center;
+    margin-top: 5vh;
+    font-family: Dosis;
+    font-size: 5rem;
 }
