Add checkbox query

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -26,7 +26,7 @@
                     </button>
                 </li>
                 <li class="listheader" id="smslistheader">
-                    Send broadcast to subscribers
+                    Send admin message to subscribers
                 </li>
                 <li>
                     <button id="sendbroadcast" data-id="" class="btn btn-mini btn-primary" type="button">
