--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -15,6 +15,14 @@ ul li {
     padding-bottom: 2rem;
 }
 
+ul li:nth-child(3) {
+    padding-top: 2rem;
+}
+
+#selectall {
+    margin-left: 3rem;
+}
+
 .listheader {
     font-weight: bold;
     font-size: large;
@@ -27,6 +35,7 @@ ul li {
 h1 {
     color: dodgerblue;
     text-align: center;
+    /*margin-left: 7vh;*/
     margin-top: 5vh;
     font-family: Dosis;
     font-size: 5rem;
