--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -20,12 +20,37 @@ ul li:nth-child(3) {
 }
 
 #selectall {
-    margin-left: 3rem;
+    /*margin-left: 2.5rem;*/
 }
-
+/*.border-test{
+    border:2px solid red;
+}
+*/
+.panel{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.table{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.margin-top{
+    margin-top: 3rem;
+}
+.margin-top_small{
+    margin-top: 1.5rem;
+}
+.padding-right{
+    padding-right: 2rem;
+}
 .listheader {
     font-weight: bold;
-    font-size: large;
+    font-size: x-large;
+    padding-bottom: 30px;
+    margin: 0;
+}
+.margin-bottom{
+    margin-bottom: 3rem;
 }
 
 .content {
