--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -11,14 +11,16 @@
 <body>
 <main>
 
-
-        <h1>nanoBTS with OpenBSC</h1>
-
+    <h1>nanoBTS with OpenBSC</h1>
 
 
     <div class="content">
+
         <div class="row">
+
             <div class="col-sm-4 col-sm-offset-1 border-test">
+                <!-- ## functionality ## -->
+
                 <h2 class="listheader" id="refreshlistheader">
                     Update subscriber list
                 </h2>
@@ -34,11 +36,11 @@
 
                 <div class=" margin-top_small">
                     <button id="selectall" data-id="" class="btn btn-sm btn-default" type="button">
-                    Select all
-                </button>
-                <button id="selectnone" data-id="" class="btn btn-sm btn-default" type="button">
-                    Select none
-                </button>
+                        Select all
+                    </button>
+                    <button id="selectnone" data-id="" class="btn btn-sm btn-default" type="button">
+                        Select none
+                    </button>
 
                 </div>
 
@@ -49,8 +51,10 @@
 
                     </div>
                 </div>
+
             </div>
 
+            <!-- ## table with subscribers ## -->
 
             <div class="col-sm-6  border-test">
                 <div class="panel panel-default col-sm-12  table-responsive" id="subs">
@@ -63,25 +67,6 @@
             </div>
 
         </div>
-
-
-        {% comment %}<div class="table table-hover" id="subs">
-        <thead>
-        <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Email</th>
-        </tr>
-        </thead>
-    </div>{% endcomment %}
-
-
-        {##}
-        {#    <div class="col-sm-2">#}
-        {#         <button id="showsubs" data-id="" class="btn btn-mini btn-danger glyphicon" type="button">#}
-        {#                    Show subscribers#}
-        {#                </button>#}
-        {#    </div>#}
     </div>
 
 
