--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -34,7 +34,7 @@
                     Broadcast
                 </button>
 
-                <div class=" margin-top_small">
+                <div class=" margin-top-small">
                     <button id="selectall" data-id="" class="btn btn-sm btn-default" type="button">
                         Select all
                     </button>
@@ -57,7 +57,7 @@
             <!-- ## table with subscribers ## -->
 
             <div class="col-sm-6  border-test">
-                <div class="panel panel-default col-sm-12  table-responsive" id="subs">
+                <div class="panel panel-default col-sm-12 table-responsive" id="subs">
 
                     <div class="panel-heading">Subscriber</div>
 
@@ -78,11 +78,3 @@
 <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
-
-
-{#<div>#}
-{% comment %}{% for sub in subs %}
-<p>{{ sub.0 }}</p>
-<p>{{ sub.1 }}</p>
-{% endfor %}{% endcomment %}
-{#</div>#}
