Add functionality to delete subscribers

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -52,7 +52,16 @@
                     </div>
                 </div>
 
+                <h2 class="listheader margin-top" id="">
+                    Delete subscriber from HLR
+                </h2>
+                <button id="delete_sub" data-id="" class="btn  btn-primary" type="button">
+                    Delete
+                </button>
+
+
             </div>
+
 
             <!-- ## table with subscribers ## -->
 
