--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -11,6 +11,10 @@
 <body>
 <main>
 
+    <div id="ajaxGif">
+        <img src="{% static "stuff/ajax-loader.gif" %}" alt="My image"/>
+
+    </div>
     <h1>nanoBTS with OpenBSC</h1>
 
 
@@ -57,6 +61,32 @@
                 </h2>
                 <button id="delete_sub" data-id="" class="btn  btn-primary" type="button">
                     Delete
+                </button>
+
+
+                <h2 class="listheader margin-top" id="">
+                    Add subscriber to HLR
+                </h2>
+
+
+                <div class="form-group margin-top padding-right">
+                    <div class="">
+                        <span class="help-block">IMSI</span>
+                        <textarea class="form-control" rows="1" id="textImsi"></textarea>
+
+                    </div>
+                </div>
+
+                <div class="form-group margin-top padding-right">
+                    <div class="">
+                        <span class="help-block">Name</span>
+                        <textarea class="form-control" rows="1" id="textName"></textarea>
+
+                    </div>
+                </div>
+
+                <button id="add_sub" data-id="" class="btn  btn-primary" type="button">
+                    Add
                 </button>
 
 
