Add status query

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -29,6 +29,7 @@
                     Update subscriber list
                 </h2>
                 <button id="showsubs" data-id="" class="btn btn-danger margin-bottom" type="button">Update</button>
+                <button id="showstatus" data-id="" class="btn btn-info margin-bottom" type="button">Show status</button>
 
 
                 <h2 class="listheader margin-top" id="smslistheader">
