Some js enhancements. Add last refresh time to Subscriber panel.

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -112,6 +112,7 @@
                 <div class="panel panel-default col-sm-12 table-responsive" id="subs">
 
                     <div class="panel-heading">Subscriber
+                        <div id="status-time"></div>
                         <div class="panel-buttons">
 
                             <button id="showsubs" data-id="" class="btn btn-xs btn-primary" type="button">Update</button>
