--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -35,10 +35,14 @@ main {
     padding-right: 15px;
 }
 .margin-top{
-    margin-top: 3rem;
+    margin-top: 5rem;
 }
 .margin-top-small{
     margin-top: 1.5rem;
+}
+
+.margin-left-small {
+    margin-left: 1rem;
 }
 .padding-right{
     padding-right: 2rem;
@@ -46,11 +50,10 @@ main {
 .listheader {
     font-weight: bold;
     font-size: x-large;
-    padding-bottom: 2rem;
     margin: 0;
 }
 .margin-bottom{
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 
 .content {
@@ -67,6 +70,7 @@ h1 {
 }
 
 .functions {
+    height: auto;
     overflow-y: scroll;
 }
 
@@ -76,5 +80,27 @@ h1 {
 }
 
 #status-time {
-    margin-left: 5rem;
+
+
+}
+
+.fat-font {
+    font-weight: bold;
+}
+
+/*.border-test {*/
+    /*border: dotted red;*/
+/*}*/
+
+.button-size {
+    /*color: #0bcb9a;*/
+    font-size: 2.5rem;
+    text-align: center;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.button-circle {
+    border-radius: 50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius: 50%;
 }
