--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -113,14 +113,14 @@
                     <div class="panel-heading">
 
                         <div class="row">
-                            <div class="border-test margin-left-small fat-font text-warning">Current Subscribers</div>
+                            <div class="border-test margin-left-small" id="panel-title">Current Subscribers</div>
 {#                            <div class="col-sm-3 border-test"></div>#}
 {#                            <div class="col-sm-5 col-sm-offset-1 text-primary border-test" id="status-time"></div>#}
 
                         </div>
 
                         <div class="row">
-                            <div class="text-primary border-test margin-left-small" id="status-time"></div>
+                            <div class="text-info border-test margin-left-small" id="status-time"></div>
 
                         </div>
 
