--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -108,3 +108,15 @@ h1 {
     -moz-border-radius:50%;
     -webkit-border-radius: 50%;
 }
+
+.testicon {
+    content:"\e089";
+}
+
+.red {
+    color: red;
+}
+
+.blue {
+    color: dodgerblue;
+}
